# mew

./: meson.build  mew.c  output.c  output.h  seat.c  seat.h  server.h  shm.c  shm.h  view.c  view.h  xdg_shell.c  xdg_shell.h
